--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 debug=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 
 
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/car_shop
+spring.datasource.username=root
+spring.datasource.password=Gfhjkm1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=validate
