--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,24 @@ debug=true
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/car_shop
-spring.datasource.username=root
-spring.datasource.password=Gfhjkm1
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/car_shop
+#spring.datasource.username=root
+#spring.datasource.password=Gfhjkm1
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=validate
 
-spring.jpa.hibernate.ddl-auto=validate
+
+
+
+# Datasource
+#spring.datasource.url=jdbc:h2:file:~/sql8
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+###
+#   Hibernate Settings
+###
+spring.jpa.hibernate.ddl-auto = create
