--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,19 @@
 #spring.datasource.username=root
 #spring.datasource.password=Gfhjkm1
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=create
+#debug=true
+#
+#spring.couchbase.bootstrap-hosts=localhost
+#spring.couchbase.bucket.name=car
+#spring.couchbase.bucket.password=Gfhjkm1
+#spring.data.couchbase.auto-index=true
+
 
 spring.jpa.hibernate.ddl-auto=create-drop
-debug=true
+
+spring.datasource.url=jdbc:h2:file:~/sql8
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
