--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@
 #spring.couchbase.bucket.password=Gfhjkm1
 #spring.data.couchbase.auto-index=true
 
-
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:h2:file:~/sql8
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+server.port= 2552
